Make category tags align correctly

--- a/themes/naked-man/assets/style.scss
+++ b/themes/naked-man/assets/style.scss
@@ -6,8 +6,6 @@ $body-family: "Noto Sans KR", sans-serif;
 
 @import "bulma/bulma.sass";
 
-$link: $red;
-
 .logo h1 {
     font-size: 1.5rem;
     font-weight: 900;
@@ -73,14 +71,15 @@ $width-sizes: 400px, 500px, 600px, 700px, 800px;
     height: 1.6em;
 }
 
-.subtitle .post-meta .post-category {
-    vertical-align: unset;
-}
-
 .main-title {
     letter-spacing: 0.1rem;
     font-weight: 900;
     text-transform: uppercase;
+}
+
+.post-meta .post-category {
+    vertical-align: unset;
+    align-items: unset;
 }
 
 .post-meta .post-category a {
@@ -92,6 +91,15 @@ $width-sizes: 400px, 500px, 600px, 700px, 800px;
 }
 
 a.title:hover {
+    color: $primary-dark;
+}
+
+.term a {
+    color: inherit;
+    //text-decoration: underline;
+}
+
+.term a:hover {
     color: $primary-dark;
 }
 
